# Energy_Dashboard

./: .gitignore  Dockerfile  MICROSERVICES_SETUP.md  PRD.md  README.md  WARP.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_microservices.py
api/: routes.py
etl/: batch.py  streaming.py
microservices/api-gateway/: Dockerfile  main.py  requirements.txt
microservices/energy-optimization-service/: Dockerfile  main.py  optimization_engine.py  requirements.txt
optimization/: scheduler.py
shared/models/: __init__.py  schemas.py
shared/utils/: __init__.py  database.py  http_client.py
tests/: pytest.py
utils/: db.py
